Updated location for style.css output / updated references in docs html accordingly.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,18 @@
   
   <body class="home">
   	<header>
-  		<div class="topbar"></div>
-  		<div class="header"></div>
+  		<div class="topbar">
+  			<div class="help"></div>
+  			<div class="utilities"></div>
+  		</div>
+  		<div class="header">
+  			<a href="/" class="logo">Vanns.com</a>
+  			<form id="search-vanns">
+  				<input class="search-vanns">
+  				<input class="submit btn">
+  			</form>
+  			
+  		</div>
   		<nav class="primary"></nav>
   	</header>
   	
