--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   				</div>
   				<!-- EMAIL SIGNUP -->
   				<div class="span4">
-  					<h4>Get the Best Deals</h4>
+  					<h4>Get the Best Deals!</h4>
   					<form class="form-search">
 				        <input type="text" class="input-small" placeholder="your@email.com">
 				        <button type="submit" class="btn">Sign up</button>
