This is a random test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 	<!-- Global styles -->
 	<link href="assets/css/global/style.css" rel="stylesheet">
 	
+	<script>
+		//test
+	</script>
+	
 	<!-- All JavaScript at the bottom, except for Modernizr and Respond. -->
 	<script src="assets/js/global/respond.min.js"></script>
 	<script src="assets/js/global/modernizr.custom.js"></script>
