--- a/result-set.html
+++ b/result-set.html
@@ -35,7 +35,7 @@
 	<link href="assets/css/areas/result-set.css" rel="stylesheet">
   </head>
   
-  <body class="home">
+  <body class="result-set">
   
   	<!-- =================================== -->
   	<!-- ======  HEADER **include**  ======= -->
@@ -140,7 +140,65 @@
   	<!-- ======  PAGE CONTAINER  ====== -->
   	<div class="page">
   		<!-- ======  PAGE SPECIFIC CONTENT  ====== -->
+  		<!-- Page Header -->
+  		<div class="container">
+  			<div class="row">
+  				<h2 class="inset-text span6 page-header">LED TVs</h2>
+  				<div class="span6 text-ad"><a href="#"><strong>24 months special financing!</strong> February 1st to March 31st</a></div>
+  			</div>
+  		</div>
+  		<!-- ======  REFINEMENTS  ====== -->
+  		<div class="container" style="height: 75px;margin-bottom: 30px;">
+  			<div class="refinements-bar">
+  				<div class="refinements">
+  					<div class="pull-left">
+  						<a href="#" class="back-btn">(arrow)<span>HDTV</span></a>
+	  					<div class="results-qty">43<span>results</span></div>
+	  					<span class="label">Price Range:</span>
+  					</div>
+  					<div class="pull-right">
+  						<span class="label">Filter by:</span>
+  						<ul>
+  							<li>Color</li>
+  							<li>In stock</li>
+  							<li>Features</li>
+  							<li>Brand</li>
+  							<li>Size</li>
+  						</ul>
+  					</div>
+  				</div>
+	  		</div>
+  		</div>
   		
+  		<div class="container">
+  			<div class="row">
+  				<div class="span12">
+  					<p>Nostrud ex wes anderson, voluptate mlkshk hoodie art party craft beer american apparel pop-up raw denim pour-over chillwave occaecat aesthetic. Ennui nihil shoreditch synth occupy. Freegan typewriter mixtape four loko, odio lo-fi chambray esse ea pinterest food truck shoreditch fap. Ex pour-over minim swag laborum, synth excepteur small batch tattooed irure vinyl laboris stumptown post-ironic. Keffiyeh sustainable echo park proident marfa magna. Excepteur narwhal freegan, pinterest odd future art party nesciunt mumblecore exercitation marfa id ethnic adipisicing dolor sriracha. Officia elit semiotics skateboard, swag esse cliche ex.</p>
+	
+	<p>Incididunt bespoke kale chips single-origin coffee vice. Pariatur cillum beard kogi twee. Skateboard squid umami, whatever beard tofu gluten-free biodiesel tattooed pickled vegan cliche small batch in. Tofu pork belly carles locavore. Cardigan ethical carles, chambray post-ironic minim art party quis four loko keytar pitchfork vice quinoa voluptate laborum. Organic artisan vero polaroid, semiotics ethical placeat velit. Next level consectetur fingerstache, squid helvetica ullamco raw denim eiusmod.</p>
+	
+	<p>Gluten-free nulla gentrify organic, eu ethnic quinoa magna hella tumblr keytar. Artisan lo-fi skateboard forage kale chips, twee aliqua american apparel pork belly Austin vinyl VHS sed you probably haven't heard of them proident. Nesciunt freegan pop-up sapiente. Qui banh mi reprehenderit blog et selvage mumblecore. Skateboard laborum yr nostrud eiusmod, biodiesel fingerstache. Authentic proident you probably haven't heard of them narwhal. Reprehenderit letterpress in mcsweeney's, dolore minim banh mi pour-over sunt.</p>
+	
+	<p>In skateboard non cardigan aesthetic. You probably haven't heard of them flexitarian fingerstache sunt officia. Photo booth whatever ad, wayfarers godard mcsweeney's tumblr iphone quis food truck deserunt aliqua butcher pickled. Locavore leggings craft beer, aliqua labore DIY mixtape sriracha VHS mumblecore brunch accusamus id. Reprehenderit portland aliqua qui sapiente in. Fingerstache squid viral farm-to-table selvage cillum, umami bicycle rights echo park ullamco placeat VHS minim locavore. Voluptate art party ex excepteur, brunch sartorial yr vice labore fugiat.</p>
+	
+	<p>Nisi pop-up bicycle rights occaecat pariatur, nihil ex cray ullamco eiusmod you probably haven't heard of them excepteur ea ennui nostrud. Cillum freegan DIY id in. Fugiat cardigan placeat, readymade keytar tofu whatever cosby sweater. Helvetica scenester jean shorts narwhal 3 wolf moon incididunt craft beer, farm-to-table fugiat sunt non street art officia stumptown. Mixtape authentic quinoa, ethical fixie twee cliche swag small batch street art. Fixie keytar mollit portland. Fingerstache iphone magna ea farm-to-table single-origin coffee, freegan +1 pork belly mlkshk gastropub.</p>
+	
+	<p>Etsy semiotics bicycle rights, polaroid flexitarian fingerstache marfa vegan typewriter nihil magna ex. Selvage veniam commodo direct trade truffaut. Eu cardigan quis, salvia aesthetic assumenda aute wes anderson mustache twee ea occaecat non chambray food truck. Yr ethical godard craft beer farm-to-table esse, adipisicing retro iphone nulla. Thundercats tempor ea, dreamcatcher semiotics organic odd future craft beer wolf jean shorts freegan elit fingerstache. Consectetur enim flexitarian sint bespoke next level. Raw denim cray deserunt before they sold out, anim aliquip aesthetic terry richardson.</p>
+	
+	<p>Nostrud ex wes anderson, voluptate mlkshk hoodie art party craft beer american apparel pop-up raw denim pour-over chillwave occaecat aesthetic. Ennui nihil shoreditch synth occupy. Freegan typewriter mixtape four loko, odio lo-fi chambray esse ea pinterest food truck shoreditch fap. Ex pour-over minim swag laborum, synth excepteur small batch tattooed irure vinyl laboris stumptown post-ironic. Keffiyeh sustainable echo park proident marfa magna. Excepteur narwhal freegan, pinterest odd future art party nesciunt mumblecore exercitation marfa id ethnic adipisicing dolor sriracha. Officia elit semiotics skateboard, swag esse cliche ex.</p>
+	
+	<p>Incididunt bespoke kale chips single-origin coffee vice. Pariatur cillum beard kogi twee. Skateboard squid umami, whatever beard tofu gluten-free biodiesel tattooed pickled vegan cliche small batch in. Tofu pork belly carles locavore. Cardigan ethical carles, chambray post-ironic minim art party quis four loko keytar pitchfork vice quinoa voluptate laborum. Organic artisan vero polaroid, semiotics ethical placeat velit. Next level consectetur fingerstache, squid helvetica ullamco raw denim eiusmod.</p>
+	
+	<p>Gluten-free nulla gentrify organic, eu ethnic quinoa magna hella tumblr keytar. Artisan lo-fi skateboard forage kale chips, twee aliqua american apparel pork belly Austin vinyl VHS sed you probably haven't heard of them proident. Nesciunt freegan pop-up sapiente. Qui banh mi reprehenderit blog et selvage mumblecore. Skateboard laborum yr nostrud eiusmod, biodiesel fingerstache. Authentic proident you probably haven't heard of them narwhal. Reprehenderit letterpress in mcsweeney's, dolore minim banh mi pour-over sunt.</p>
+	
+	<p>In skateboard non cardigan aesthetic. You probably haven't heard of them flexitarian fingerstache sunt officia. Photo booth whatever ad, wayfarers godard mcsweeney's tumblr iphone quis food truck deserunt aliqua butcher pickled. Locavore leggings craft beer, aliqua labore DIY mixtape sriracha VHS mumblecore brunch accusamus id. Reprehenderit portland aliqua qui sapiente in. Fingerstache squid viral farm-to-table selvage cillum, umami bicycle rights echo park ullamco placeat VHS minim locavore. Voluptate art party ex excepteur, brunch sartorial yr vice labore fugiat.</p>
+	
+	<p>Nisi pop-up bicycle rights occaecat pariatur, nihil ex cray ullamco eiusmod you probably haven't heard of them excepteur ea ennui nostrud. Cillum freegan DIY id in. Fugiat cardigan placeat, readymade keytar tofu whatever cosby sweater. Helvetica scenester jean shorts narwhal 3 wolf moon incididunt craft beer, farm-to-table fugiat sunt non street art officia stumptown. Mixtape authentic quinoa, ethical fixie twee cliche swag small batch street art. Fixie keytar mollit portland. Fingerstache iphone magna ea farm-to-table single-origin coffee, freegan +1 pork belly mlkshk gastropub.</p>
+	
+	<p>Etsy semiotics bicycle rights, polaroid flexitarian fingerstache marfa vegan typewriter nihil magna ex. Selvage veniam commodo direct trade truffaut. Eu cardigan quis, salvia aesthetic assumenda aute wes anderson mustache twee ea occaecat non chambray food truck. Yr ethical godard craft beer farm-to-table esse, adipisicing retro iphone nulla. Thundercats tempor ea, dreamcatcher semiotics organic odd future craft beer wolf jean shorts freegan elit fingerstache. Consectetur enim flexitarian sint bespoke next level. Raw denim cray deserunt before they sold out, anim aliquip aesthetic terry richardson.</p>
+  				</div>
+  			</div>
+  		</div>
   		
 	  	<!-- About paragraph -->
 	  	<div class="container">
@@ -317,14 +375,11 @@
 	<![endif]-->
 	
 	<!-- Page specific scripts/options -->
-	<script src="assets/js/areas/home-min.js"></script>
+	<script src="assets/js/areas/result-set-min.js"></script>
 	
 	<script type="text/javascript">
 		$(document).ready(
-			function(){
-				// Scrollable options (Featured brands)
-		        $("#brand-scroller").scrollable({circular: true}).autoscroll({ autoplay: true, interval: 7000 });
-			}
+			
 		);
 	</script>
   </body>
