More updates to Refinements
Styled some more of the refinements bar

--- a/result-set.html
+++ b/result-set.html
@@ -152,13 +152,13 @@
   			<div class="refinements-bar">
   				<div class="refinements">
   					<div class="pull-left">
-  						<a href="#" class="back-btn">(arrow)<span>HDTV</span></a>
-	  					<div class="results-qty">43<span>results</span></div>
+  						<a href="#" class="back-btn"><span>Back to</span>HDTV</a>
+	  					<div class="results-qty"><span>43</span>results</div>
 	  					<span class="label">Price Range:</span>
   					</div>
   					<div class="pull-right">
   						<span class="label">Filter by:</span>
-  						<ul>
+  						<ul class="filters">
   							<li>Color</li>
   							<li>In stock</li>
   							<li>Features</li>
