Lots updates to result set CSS
Added sticky refinements bar - added tabbed javascript plugin for
refinement selections.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   						<li><a href="#">Order Tracking</a></li>
   						<li id="cart" class="full"><a href="#"><i></i><strong>2</strong></a></li>
   						<li class="acct-avatar dropdown" id="menu-acct">
-  							<a class="dropdown-toggle" data-toggle="dropdown" href="#menu-acct"><img src="assets/img/topbar-acct-avatar.png">John</a>
+  							<a class="dropdown-toggle" data-toggle="dropdown" href="#menu-acct"><img src="assets/img/topbar/topbar-acct-avatar.png">John</a>
 						    <ul class="dropdown-menu">
 						      <li><a href="#">Account settings</a></li>
 						      <li><a href="#">Returns</a></li>
@@ -88,7 +88,7 @@
   				<div class="row">
   					<!-- LOGO -->
 	  				<a href="/" class="logo span3">
-		  				<img src="assets/img/header-logo.png" alt="Vanns.com" title="Vanns.com" width="210" height="45">
+		  				<img src="assets/img/header/header-logo.png" alt="Vanns.com" title="Vanns.com" width="210" height="45">
 		  			</a>
 		  			<!-- SEARCH -->
 		  			<form id="search" class="span6">
@@ -368,12 +368,12 @@
   		<section class="footer-bottom">
   			<!-- AWARDS / RECOGNITION -->
   			<div class="recognition">
-  				<img src="assets/img/footer-stella.png" alt="Stella Service Award - Excellent" title="Stella Service Award - Excellent"/>
-  				<img src="assets/img/footer-bizrate.png" alt="Bizrate Circle of Excellence Award" title="Bizrate Circle of Excellence Award"/>
-  				<img src="assets/img/footer-verisign.png" alt="Verisign Secured" title="Verisign Secured"/>
-  				<img src="assets/img/footer-mcafee.png" alt="McAfee Secure" title="McAfee Secure"/>
-  				<img src="assets/img/footer-paypal.png" alt="PayPal Accepted" title="PayPal Accepted"/>
-  				<img src="assets/img/footer-bbb.png" alt="BBB Accredited" title="BBB Accredited"/>
+  				<img src="assets/img/footer/footer-stella.png" alt="Stella Service Award - Excellent" title="Stella Service Award - Excellent"/>
+  				<img src="assets/img/footer/footer-bizrate.png" alt="Bizrate Circle of Excellence Award" title="Bizrate Circle of Excellence Award"/>
+  				<img src="assets/img/footer/footer-verisign.png" alt="Verisign Secured" title="Verisign Secured"/>
+  				<img src="assets/img/footer/footer-mcafee.png" alt="McAfee Secure" title="McAfee Secure"/>
+  				<img src="assets/img/footer/footer-paypal.png" alt="PayPal Accepted" title="PayPal Accepted"/>
+  				<img src="assets/img/footer/footer-bbb.png" alt="BBB Accredited" title="BBB Accredited"/>
   			</div>
   			<!-- LEGAL -->
   			<div class="legal">
