--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body class="home">
   
   	<!-- =================================== -->
-  	<!-- ======  HEADER **include**  ======= -->
+  	<!-- =====  HEADER **include**  ======= -->
   	<!-- =================================== -->
   	<header>
   		<!-- ======  TOPBAR  ====== -->
@@ -82,7 +82,7 @@
   				</div>
   			</div>
   		</div>
-  		<!-- ======  MAIN HEADER AREA  ====== -->
+  		<!-- !=====  MAIN HEADER AREA  ====== -->
   		<div class="header">
   			<div class="container">
   				<div class="row">
@@ -115,7 +115,7 @@
 	  			</div>
   			</div>
   		</div>
-  		<!-- ======  PRIMARY NAVIGATION (**Include**)  ====== -->
+  		<!-- !=====  PRIMARY NAVIGATION (**Include**)  ====== -->
 		<nav id="primary">
 			<!-- MENU BAR -->
   			<ul class="container menubar">
@@ -126,15 +126,68 @@
   				<li class="cameras"><a href="#"><i></i>Cameras & Camcorders</a></li>
   				<li class="appliances"><a href="#"><i></i>Appliances</a></li>
   			</ul>
-  			<!-- ======  SUBNAVIGATION  ====== -->
-  			<!--<div id="subnav">
-  				<div class="container">SUBNAV</div>
-  			</div>-->
+  			<!-- !=====  SUBNAVIGATION  ====== -->
+  			<div id="subnav">
+  				<div id="video" class="container">
+  					<div class="nav-content">
+  						<h2>Home Audio</h2>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Receivers & Components</a>
+  							<ul>
+  								<li><a href="#">Home Theater</a></li>
+  								<li><a href="#">Stereo</a></li>
+  								<li><a href="#">Integrated Amplifiers</a></li>
+  								<li><a href="#">Preamps &amp; Power Amps</a></li>
+  								<li><a href="#">Sonos Music Systems</a></li>
+  								<li><a href="#">Multi-room &amp; Amps</a></li>
+  								<li><a href="#">Multi-room Audio</a></li>
+  								<li><a href="#">Turntables &amp; Accessories</a></li>
+  								<li><a href="#">CD Players</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+  							<a href="#" class="nav-title">Speakers</a>
+  							<ul>
+  								<li><a href="#">Floor-standing</a></li>
+  								<li><a href="#">Bookshelf</a></li>
+  								<li><a href="#">Surround Sound Systems</a></li>
+  								<li><a href="#">Center Channel</a></li>
+  								<li><a href="#">Powered Subwoofers</a></li>
+  								<li><a href="#">In-ceiling</a></li>
+  								<li><a href="#">In-wall</a></li>
+  								<li><a href="#">Outdoor</a></li>
+  								<li><a href="#">iPod Speakers</a></li>
+  							</ul>
+  						</div>
+  						<div class="nav-column">
+	  						<a href="#" class="nav-title">Computer &amp; iTunes Hi-Fi</a>
+	  						<ul>
+	  							<li><a href="#">Computer Speakers</a></li>
+	  							<li><a href="#">Network Music Players</a></li>
+	  							<li><a href="#">Digital-to-Analog Converters</a></li>
+	  						</ul>
+	  					</div>
+	  					<div class="nav-column last">
+	  						<a href="#" class="nav-title">Accessories</a>
+	  						<ul>
+	  							<li><a href="#">All Headphones</a></li>
+	  							<li><a href="#">HDMI Cables</a></li>
+	  							<li><a href="#">Power Protection</a></li>
+	  							<li><a href="#">Furniture</a></li>
+	  							<li><a href="#">A/V Cables &amp; Installation</a></li>
+	  							<li><a href="#">Home Remote Controls</a></li>
+	  						</ul>
+	  					</div>
+  					</div>
+	  				<div class="nav-marketing">
+	  					<p>Some Marketing Cool Stuff</p>
+	  				</div>
+  			</div>
   		</nav>
   	</header>
   	
   	<!-- ======================= -->
-  	<!-- ======  PAGE  ========= -->
+  	<!-- !=====  PAGE  ========= -->
   	<!-- ======================= -->
   	
   	<!-- ======  PAGE CONTAINER  ====== -->
@@ -268,7 +321,7 @@
   	</div>
   	
   	<!-- ======================= -->
-  	<!-- ======  FOOTER  ======= -->
+  	<!-- !=====  FOOTER  ======= -->
   	<!-- ======================= -->
   	<footer class="container">
   		<section class="footer-main">
