--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
 	  					</div>
   					</div>
 	  				<div class="nav-marketing">
-	  					<p>Some Marketing Cool Stuff</p>
+	  					<div class="nav-messaging">
+	  						Some Marketing Cool Stuff
+	  					</div>
 	  				</div>
   			</div>
   		</nav>
@@ -450,6 +452,7 @@
     
 	<!-- Global scripts/options concatenated and minified via Codekit-->
 	<script src="assets/js/global/plugins-min.js"></script>
+	<script src="assets/js/global/navigation-min.js"></script>
 	
 	<script type="text/javascript">
 		$(document).ready(
