More work on navigation
Work on navigation is coming along nicely. Smoothed out the transition.
Completed class changes upon click of each <li>. Added a transition to
the marketing zone. I will be changing from javascript to CSS
transition for this animation.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   				<li class="appliances"><a href="#"><i></i>Appliances</a></li>
   			</ul>
   			<!-- !=====  SUBNAVIGATION  ====== -->
-  			<div id="subnav">
+  			<div id="subnav" class="closed">
   				<div id="video" class="container">
   					<div class="nav-content">
   						<h2>Home Audio</h2>
